force-app/main/default/objects/Entity__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>This is used in the Maine customer contract in SSF.</description>
    <inlineHelpText>This is used in the Maine customer contract in SSF.</inlineHelpText>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>