force-app/main/default/objects/Entity__c/fields/Assignment_Agreement_Template__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Agreement_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Assignment Agreement template that will be used by Conga to generate the document. This field overrides the template field on the Client Account.</inlineHelpText>
    <label>Assignment Agreement Template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Entities</relationshipLabel>
    <relationshipName>Entities</relationshipName>
    <type>Lookup</type>
</CustomField>