force-app/main/default/objects/Entity__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Entities</relationshipLabel>
    <relationshipName>Entities</relationshipName>
    <type>Lookup</type>
</CustomField>