force-app/main/default/objects/Entity__c/fields/DC_Annual_Report__c.field-meta.xml
<CustomField>
    <fullName>DC_Annual_Report__c</fullName>
    <inlineHelpText>Insert date of most recent filed annual report; due 6/16 the year after registration and on 6/16 every 2 years thereafter; $100 late fee</inlineHelpText>
    <label>DC Biennial Report</label>
    <type>Date</type>
</CustomField>