force-app/main/default/objects/Entity__c/fields/DC_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>DC_ID_Number__c</fullName>
    <label>DC ID Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>