force-app/main/default/objects/Entity__c/fields/DC_Registration__c.field-meta.xml
<CustomField>
    <fullName>DC_Registration__c</fullName>
    <label>DC Registration</label>
    <type>Date</type>
</CustomField>