force-app/main/default/objects/Entity__c/fields/DE_Certificate_of_Good_Standing__c.field-meta.xml
<CustomField>
    <fullName>DE_Certificate_of_Good_Standing__c</fullName>
    <label>DE Certificate of Good Standing</label>
    <type>Date</type>
</CustomField>