force-app/main/default/objects/Entity__c/fields/DE_File_Number__c.field-meta.xml
<CustomField>
    <fullName>DE_File_Number__c</fullName>
    <label>DE File Number</label>
    <length>249</length>
    <type>Text</type>
</CustomField>