force-app/main/default/objects/Entity__c/fields/DE_Formation__c.field-meta.xml
<CustomField>
    <fullName>DE_Formation__c</fullName>
    <label>DE Formation</label>
    <type>Date</type>
</CustomField>