force-app/main/default/objects/Entity__c/fields/DE_Taxes_Paid__c.field-meta.xml
<CustomField>
    <fullName>DE_Taxes_Paid__c</fullName>
    <inlineHelpText>franchise taxes - due on or before June 1st to avoid fees</inlineHelpText>
    <label>DE Annual Report</label>
    <type>Date</type>
</CustomField>