force-app/main/default/objects/Entity__c/fields/Deposit_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Deposit_to_Account__c</fullName>
    <description>Used by accounting for paper check deposits</description>
    <inlineHelpText>Used by accounting for paper check deposits</inlineHelpText>
    <label>Paper Check Deposit to Account</label>
    <length>60</length>
    <type>Text</type>
</CustomField>