force-app/main/default/objects/Entity__c/fields/DOS_ID__c.field-meta.xml
<CustomField>
    <fullName>DOS_ID__c</fullName>
    <label>NY DOS ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>