force-app/main/default/objects/Entity__c/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <label>DUNS Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>