force-app/main/default/objects/Entity__c/fields/EIN_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>EIN_Request_Date__c</fullName>
    <description>if 1/1/2000 then EIN Request Date pre dates Salesforce adoption</description>
    <label>EIN Request Date</label>
    <type>Date</type>
</CustomField>