force-app/main/default/objects/Entity__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>This is used in the Maine Customer contract in SSF.</description>
    <inlineHelpText>This is used in the Maine Customer contract in SSF.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>