force-app/main/default/objects/Entity__c/fields/Entity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Entity_Owner__c</fullName>
    <label>Entity Owner</label>
    <length>249</length>
    <type>Text</type>
</CustomField>