force-app/main/default/objects/Entity__c/fields/FL_Annual_Report__c.field-meta.xml
<CustomField>
    <fullName>FL_Annual_Report__c</fullName>
    <inlineHelpText>Annual reports are due between January 1 and May 1 each year to avoid late fees; due by the third Friday in September to avoid administrative dissolution</inlineHelpText>
    <label>FL Annual Report</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>2016</fullName>
                
                
                    <label>2016</label>
                
                </value>
            
                <value>
                
                    <fullName>2017</fullName>
                
                
                    <label>2017</label>
                
                </value>
            
                <value>
                
                    <fullName>2018</fullName>
                
                
                    <label>2018</label>
                
                </value>
            
                <value>
                
                    <fullName>2019</fullName>
                
                
                    <label>2019</label>
                
                </value>
            
                <value>
                
                    <fullName>2020</fullName>
                
                
                    <label>2020</label>
                
                </value>
            
                <value>
                
                    <fullName>2021</fullName>
                
                
                    <label>2021</label>
                
                </value>
            
                <value>
                
                    <fullName>2022</fullName>
                
                
                    <label>2022</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>