force-app/main/default/objects/Entity__c/fields/FL_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>FL_Document_Number__c</fullName>
    <label>FL Document Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>