force-app/main/default/objects/Entity__c/fields/FL_Foreign_Registration__c.field-meta.xml
<CustomField>
    <fullName>FL_Foreign_Registration__c</fullName>
    <label>FL Foreign Registration</label>
    <type>Date</type>
</CustomField>