force-app/main/default/objects/Entity__c/fields/Latest_MA_Annual_Report__c.field-meta.xml
<CustomField>
    <fullName>Latest_MA_Annual_Report__c</fullName>
    <inlineHelpText>MA annual reports due on anniversary of formation, no late fees</inlineHelpText>
    <label>MA Annual Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>