force-app/main/default/objects/Entity__c/fields/MA_Certificate_of_Good_Standing__c.field-meta.xml
<CustomField>
    <fullName>MA_Certificate_of_Good_Standing__c</fullName>
    <label>MA Certificate of Good Standing</label>
    <type>Date</type>
</CustomField>