force-app/main/default/objects/Entity__c/fields/MA_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>MA_ID_Number__c</fullName>
    <label>MA ID Number</label>
    <length>249</length>
    <type>Text</type>
</CustomField>