force-app/main/default/objects/Entity__c/fields/MA_Login__c.field-meta.xml
<CustomField>
    <fullName>MA_Login__c</fullName>
    <label>MA Login</label>
    <length>249</length>
    <type>Text</type>
</CustomField>