force-app/main/default/objects/Entity__c/fields/MA_Pin__c.field-meta.xml
<CustomField>
    <fullName>MA_Pin__c</fullName>
    <label>MA Pin</label>
    <length>249</length>
    <type>Text</type>
</CustomField>