force-app/main/default/objects/Entity__c/fields/MA_Registration__c.field-meta.xml
<CustomField>
    <fullName>MA_Registration__c</fullName>
    <label>MA Registration</label>
    <type>Date</type>
</CustomField>