force-app/main/default/objects/Entity__c/fields/MD_Annual_Report__c.field-meta.xml
<CustomField>
    <fullName>MD_Annual_Report__c</fullName>
    <inlineHelpText>Insert date of most recent filed report; due on 4/15 of each year; late fees do apply ($30-500)</inlineHelpText>
    <label>MD Annual Report</label>
    <type>Date</type>
</CustomField>