force-app/main/default/objects/Entity__c/fields/MD_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>MD_ID_Number__c</fullName>
    <label>MD ID Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>