force-app/main/default/objects/Entity__c/fields/MD_Registration__c.field-meta.xml
<CustomField>
    <fullName>MD_Registration__c</fullName>
    <label>MD Registration</label>
    <type>Date</type>
</CustomField>