force-app/main/default/objects/Entity__c/fields/Membership_Certificate_Location__c.field-meta.xml
<CustomField>
    <fullName>Membership_Certificate_Location__c</fullName>
    <inlineHelpText>Location where the Membership Certificates are held</inlineHelpText>
    <label>Membership Certificate Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BlueWave office</fullName>
            </value>
            <value>
                <fullName>Lender&apos;s office</fullName>
            </value>
            <value>
                <fullName>Other - see notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>