force-app/main/default/objects/Entity__c/fields/Merchant_Security_Key__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Security_Key__c</fullName>
    <label>Merchant Security Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>