force-app/main/default/objects/Entity__c/fields/MN_File_Number__c.field-meta.xml
<CustomField>
    <fullName>MN_File_Number__c</fullName>
    <label>MN File Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>