force-app/main/default/objects/Entity__c/fields/MN_Foreign_Registration__c.field-meta.xml
<CustomField>
    <fullName>MN_Foreign_Registration__c</fullName>
    <label>MN Foreign Registration</label>
    <type>Date</type>
</CustomField>