force-app/main/default/objects/Entity__c/fields/Name_on_Deposit_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Deposit_Bank_Account__c</fullName>
    <label>Name on Deposit Bank Account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>