force-app/main/default/objects/Entity__c/fields/NC_Certificate_of_Good_Standing__c.field-meta.xml
<CustomField>
    <fullName>NC_Certificate_of_Good_Standing__c</fullName>
    <label>NC Certificate of Good Standing</label>
    <type>Date</type>
</CustomField>