force-app/main/default/objects/Entity__c/fields/NC_Foreign_Registration__c.field-meta.xml
<CustomField>
    <fullName>NC_Foreign_Registration__c</fullName>
    <label>NC Foreign Registration</label>
    <type>Date</type>
</CustomField>