force-app/main/default/objects/Entity__c/fields/NC_SOSID__c.field-meta.xml
<CustomField>
    <fullName>NC_SOSID__c</fullName>
    <label>NC SOSID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>