force-app/main/default/objects/Entity__c/fields/NJ_Annual_Report__c.field-meta.xml
<CustomField>
    <fullName>NJ_Annual_Report__c</fullName>
    <inlineHelpText>due on the last day of month of anniversary of registration in NJ; no late fees</inlineHelpText>
    <label>NJ Annual Report</label>
    <type>Date</type>
</CustomField>