force-app/main/default/objects/Entity__c/fields/NJ_ID__c.field-meta.xml
<CustomField>
    <fullName>NJ_ID__c</fullName>
    <label>NJ ID Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>