force-app/main/default/objects/Entity__c/fields/NJ_Registration__c.field-meta.xml
<CustomField>
    <fullName>NJ_Registration__c</fullName>
    <label>NJ Registration</label>
    <type>Date</type>
</CustomField>