force-app/main/default/objects/Entity__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>General notes field - added specifically to work with the Membership Certificate Location field, but can be used for other notes</description>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>