force-app/main/default/objects/Entity__c/fields/NY_Biennial_Report__c.field-meta.xml
<CustomField>
    <fullName>NY_Biennial_Report__c</fullName>
    <inlineHelpText>due during the month the business was incorporated or granted authority</inlineHelpText>
    <label>NY Biennial Report</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>2016</fullName>
                
                
                    <label>2016</label>
                
                </value>
            
                <value>
                
                    <fullName>2017</fullName>
                
                
                    <label>2017</label>
                
                </value>
            
                <value>
                
                    <fullName>2018</fullName>
                
                
                    <label>2018</label>
                
                </value>
            
                <value>
                
                    <fullName>2019</fullName>
                
                
                    <label>2019</label>
                
                </value>
            
                <value>
                
                    <fullName>2020</fullName>
                
                
                    <label>2020</label>
                
                </value>
            
                <value>
                
                    <fullName>2021</fullName>
                
                
                    <label>2021</label>
                
                </value>
            
                <value>
                
                    <fullName>2022</fullName>
                
                
                    <label>2022</label>
                
                </value>
            
                <value>
                
                    <fullName>2023</fullName>
                
                
                    <label>2023</label>
                
                </value>
            
                <value>
                
                    <fullName>2024</fullName>
                
                
                    <label>2024</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>