force-app/main/default/objects/Entity__c/fields/NY_Foreign_Registration__c.field-meta.xml
<CustomField>
    <fullName>NY_Foreign_Registration__c</fullName>
    <label>NY Foreign Registration</label>
    <type>Date</type>
</CustomField>