force-app/main/default/objects/Entity__c/fields/Operating_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Operating_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operating Agreement</label>
    <type>Checkbox</type>
</CustomField>