force-app/main/default/objects/Entity__c/fields/Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Zuora will use the gateway specified here. If blank, Zuora will use the Payment Gateway specified on the Client&apos;s Account record.</inlineHelpText>
    <label>Payment Gateway Override</label>
    <referenceTo>Zuora__PaymentGateway__c</referenceTo>
    <relationshipLabel>Entities</relationshipLabel>
    <relationshipName>Entities</relationshipName>
    <type>Lookup</type>
</CustomField>