force-app/main/default/objects/Entity__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>This is displayed on Maine contracts in the Project Sponsor table.</description>
    <inlineHelpText>This is displayed on Maine contracts in the Project Sponsor table.</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>