force-app/main/default/objects/Entity__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the lookup to the portfolio object.</description>
    <inlineHelpText>Client Portfolio that this Entity is assigned to.</inlineHelpText>
    <label>Portfolio</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>Entities</relationshipLabel>
    <relationshipName>Entities</relationshipName>
    <type>Lookup</type>
</CustomField>