force-app/main/default/objects/Entity__c/fields/RI_Annual_Report__c.field-meta.xml
<CustomField>
    <fullName>RI_Annual_Report__c</fullName>
    <inlineHelpText>Annual Reports must be filed between 9/1 and 11/1 or else late fees</inlineHelpText>
    <label>RI Annual Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>