force-app/main/default/objects/Entity__c/fields/RI_Foreign_Registration__c.field-meta.xml
<CustomField>
    <fullName>RI_Foreign_Registration__c</fullName>
    <label>RI Foreign Registration</label>
    <type>Date</type>
</CustomField>