force-app/main/default/objects/Entity__c/fields/RI_Login__c.field-meta.xml
<CustomField>
    <fullName>RI_Login__c</fullName>
    <inlineHelpText>Email corp_pin@sos.ri.gov to obtain Login and PIN</inlineHelpText>
    <label>RI Login</label>
    <length>8</length>
    <type>Text</type>
</CustomField>