force-app/main/default/objects/Entity__c/fields/RI_PIN__c.field-meta.xml
<CustomField>
    <fullName>RI_PIN__c</fullName>
    <label>RI PIN</label>
    <length>8</length>
    <type>Text</type>
</CustomField>