force-app/main/default/objects/Entity__c/fields/Sale_date__c.field-meta.xml
<CustomField>
    <fullName>Sale_date__c</fullName>
    <description>Date entity was sold. Must be populated when status is changed to Sold</description>
    <label>Sale date</label>
    <type>Date</type>
</CustomField>