force-app/main/default/objects/Entity__c/fields/SC_Certificate_of_Good_Standing__c.field-meta.xml
<CustomField>
    <fullName>SC_Certificate_of_Good_Standing__c</fullName>
    <label>SC Certificate of Good Standing</label>
    <type>Date</type>
</CustomField>