force-app/main/default/objects/Entity__c/fields/SC_Foreign_Registration__c.field-meta.xml
<CustomField>
    <fullName>SC_Foreign_Registration__c</fullName>
    <label>SC Foreign Registration</label>
    <type>Date</type>
</CustomField>