force-app/main/default/objects/Entity__c/fields/Send_Checks_Address__c.field-meta.xml
<CustomField>
    <fullName>Send_Checks_Address__c</fullName>
    <label>Send Checks Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>