force-app/main/default/objects/Entity__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>In Good Standing</fullName>
            </value>
            <value>
                <fullName>Not in Good Standing</fullName>
            </value>
            <value>
                <fullName>Termination in process</fullName>
            </value>
            <value>
                <fullName>Terminated - DO NOT USE</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>