force-app/main/default/objects/Entity__c/fields/Type_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Project__c</fullName>
    <label>Type of Project</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>C&amp;I</fullName>
                
                
                    <label>C&amp;I</label>
                
                </value>
            
                <value>
                
                    <fullName>Ground Mount</fullName>
                
                
                    <label>Ground Mount</label>
                
                </value>
            
                <value>
                
                    <fullName>Storage Facility</fullName>
                
                
                    <label>Storage Facility</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>