force-app/main/default/objects/Entity__c/recordTypes/BWC_Business_Entity.recordType-meta.xml
<RecordType>
    <fullName>BWC_Business_Entity</fullName>
    <active>true</active>
    <label>BWC Business Entity</label>
</RecordType>