force-app/main/default/objects/Entity__c/recordTypes/BWC_Project_Entity.recordType-meta.xml
<RecordType>
    <fullName>BWC_Project_Entity</fullName>
    <active>true</active>
    <label>BWC Project Entity</label>
</RecordType>