force-app/main/default/objects/Entity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client_Account__c</columns>
    <columns>Entity_Owner__c</columns>
    <columns>Send_Checks_Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>RECORDTYPE</field>
        
            <operation>equals</operation>
        
            <value>Entity__c.BWC_Project_Entity</value>
        
        </filters>
    <label>All</label>
</ListView>